--- a/Rogue Arts Website/AboutUs.html
+++ b/Rogue Arts Website/AboutUs.html
@@ -6,8 +6,12 @@
         <title>About Us</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        
+        <!-- Bootstrap, Font Awesome and custom CSS-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/about_us.css">
+        
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -16,24 +20,31 @@
     </head>
 
     <body class="bg-dark text-light" style="font-size: 20px;">
-        <div class="container container-fluid"></div>
+        <!-- Navbar begins here-->
+        <div class="container-fluid"></div>
             <nav class="navbar navbar-light bg-secondary">
-                    <nav class="navbar" style="margin-left: 46% ;">
-                        <a class="navbar-brand" href="homepage.html">
-                            <img src="images/logo.png" width="120" height="120" class="d-inline-block align-top" alt="Rogue Arts">                                        
-                        </a>
-                    </nav>              
+                <!-- Social media icons with links to respective accounts-->
+                <div>
+                    <a href="https://www.facebook.com/RogueArtsDev/" class="fa fa-facebook"></a>
+                    <a href="https://twitter.com/RogueArts_Dev?ref_src=twsrc%5Etfw" class="fa fa-twitter"></a>
+                </div>
+                <!-- centers image-->
+                <div class="navbar" id="navbar_logo">
+                    <a class="navbar-brand" href="homepage.html">
+                        <img src="images/logo.png" class="img-fluid" width="120" height="120" class="d-inline-block align-top" alt="Rogue Arts">                                        
+                    </a>
+                </div>              
                 <!-- Aligns dropdown menu to right of page-->
                 <div class="dropdown col-4 text-right">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 28px;">
                     Menu
                     </button>
 
-                    <!-- Lines dropdown items with menu-->
+                    <!-- Aligns dropdown items with menu-->
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="Homepage.html">Home</a>
                     <a class="dropdown-item" href="AboutUs.html">About Us</a>
                     <a class="dropdown-item" href="FamilyHeirloom.html">Family Heirloom</a>
-                    <a href="https://twitter.com/RogueArts_Dev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @RogueArts_Dev</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
             </nav>
@@ -46,7 +57,7 @@
         <!-- TODO get full team picture-->
         <div class="container-fluid content justify-content-center">
             <div class="row justify-content-center">
-                    <img src="images/team_portrait.png" class="img-fluid rounded mx-auto">
+                    <img src="images/taliyah-main.jpg" class="img-fluid rounded mx-auto">
             </div>
         </div>
 
@@ -57,14 +68,16 @@
                  <!-- TODO add information about the game-->
                  <div class="col-md-7">
                     <p>
-                        Our upcoming release, Family Heirloom, is a scary Stealth Horror game with exciting Sci-Fi elements. You are tasked with
-                        manoeuvering throughout a facility plagued with the infected remnants of humanity. Your goal is to discover the fate of
-                        your family, and if possible, rescue them from a fate worse than death.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dolor ratione non repellendus,
+                        rerum aperiam id blanditiis! Ipsam, sequi, assumenda, laudantium fugiat voluptas quod harum debitis
+                        nobis doloribus dolores illo. 
                     </p>
                     <p>
-                        Explore through the wretched remains of what used to be a laboratory to find the crucial, but limited, ingredients to create
-                        the life-saving vaccine. Be careful as you travel, as the infected will hear you wandering and will stop at nothing to
-                        chase you down and transform you into one of them.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero atque veniam vitae sunt doloribus
+                        fuga placeat magnam! Aliquid eaque architecto illo earum nulla eos soluta sed, unde accusamus
+                        est assumenda? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam culpa magnam,
+                        eum assumenda ipsum dolorum obcaecati placeat quibusdam, sequi, expedita quod. Quibusdam quam 
+                        iusto eius enim nostrum corporis omnis temporibus.
                     </p>
                  </div>
             </div>
@@ -77,7 +90,7 @@
             <div class="row justify-content-around">
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Andrew photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Andrew Chapman</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -87,9 +100,9 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Robin Photo">                                    
                         <div class="card-body">
-                            <h4 class="card-title">Robin Hagley</h4>
+                            <h4 class="card-title">robin_team Hagley</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
                         </div>
                     </div>
@@ -97,7 +110,7 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Luke photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Luke Fleming</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -110,7 +123,7 @@
             <div class="row justify-content-around">
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Liam photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Liam Wilkinson</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -120,7 +133,7 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Jamie photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Jamie Wilkinson</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -130,7 +143,7 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Family Heirloom Logo">                                    
+                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Christos photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Christos Palantzas</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
