--- a/Rogue Arts Website/FamilyHeirloom.html
+++ b/Rogue Arts Website/FamilyHeirloom.html
@@ -99,6 +99,38 @@
                 </div>
             </div>
         </div>
+
+        <hr />
+        <h1 class="align-middle text-center">Screenshots & Art</h1>
+
+        <!-- Carousel to show images/art of the game-->
+
+        <!-- Use this to add more images to the carousel
+                <div class="carousel-item">
+                    <img class="d-block w-40" src="IMAGE_SOURCE_HERE" alt=""> 
+                </div>
+        -->
+        <div class="carousel slide" data-ride="carousel" id="carousel_controls">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-40" src="images/silhouette.png" alt="silhouette slide"> 
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-40" src="images/infected_humanoid.png" alt="infected slide"> 
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-40" src="images/med_gun.png" alt="med gun slide"> 
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel_controls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel_controls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+        </div>
     </body>
 
 </html>
