--- a/Rogue Arts Website/AboutUs.html
+++ b/Rogue Arts Website/AboutUs.html
@@ -57,7 +57,7 @@
         <!-- TODO get full team picture-->
         <div class="container-fluid content justify-content-center">
             <div class="row justify-content-center">
-                    <img src="images/taliyah-main.jpg" class="img-fluid rounded mx-auto">
+                    <img src="images/landscape_placeholder.png" class="img-fluid rounded mx-auto">
             </div>
         </div>
 
@@ -87,10 +87,10 @@
         <h1 class="align-middle text-center">Meet The Team</h1>
         
         <div class="container-fluid" id="team_container">
-            <div class="row justify-content-around">
+            <div class="row">
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Andrew photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Andrew photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Andrew Chapman</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -100,9 +100,9 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Robin Photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Robin Photo">                                    
                         <div class="card-body">
-                            <h4 class="card-title">robin_team Hagley</h4>
+                            <h4 class="card-title">Robin Hagley</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
                         </div>
                     </div>
@@ -110,9 +110,19 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Luke photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Luke photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Luke Fleming</h4>
+                            <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="card bg-dark text-light" style="width: 18rem;">
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Luke photo">                                    
+                        <div class="card-body">
+                            <h4 class="card-title">Jake Proudfoot</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
                         </div>
                     </div>
@@ -123,7 +133,7 @@
             <div class="row justify-content-around">
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Liam photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Liam photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Liam Wilkinson</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -133,7 +143,7 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Jamie photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Jamie photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Jamie Wilkinson</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
@@ -143,7 +153,7 @@
 
                 <div class="col-sm-3">
                     <div class="card bg-dark text-light" style="width: 18rem;">
-                        <img src="images/robin_team.jpg" width="286" height="200" class="rounded" alt="Christos photo">                                    
+                        <img src="images/portrait_placeholder.png" width="286" height="200" class="rounded" alt="Christos photo">                                    
                         <div class="card-body">
                             <h4 class="card-title">Christos Palantzas</h4>
                             <p class="card-text">This is where I'll put the text describing some things about this team member.</p>
