--- a/Rogue Arts Website/FamilyHeirloom.html
+++ b/Rogue Arts Website/FamilyHeirloom.html
@@ -53,23 +53,21 @@
 
         <br />
 
-        <h1 class="align-middle text-center">Family Heirloom</h1>
         
-        <div class="container-fluid content">
-            <!-- TODO put something like game logo, or cinematic screenshot-->
+        <!-- <div class="container-fluid content">
+             TODO put something like game logo, or cinematic screenshot
             <div class="row justify-content-center">
                     <img src="images/robin_team.jpg" class="img-fluid rounded mx-auto">
             </div>
-        </div>
+        </div> -->
 
-        <hr />
         <div class="container-fluid content">
-            <h1 class="align-middle text-center"> The Game</h1>
+            <h1 class="align-middle text-center"> Family Heirloom</h1>
             <br/>
             <!-- TODO change to game trailer-->
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <iframe  style="height: 800px;" class="embed-responsive embed-responsive-16by9" style="height: 100%;" src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe  style="height: 800px" class="embed-responsive embed-responsive-16by9" style="height: 100%;" src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <br/>
