--- a/Rogue Arts Website/Homepage.html
+++ b/Rogue Arts Website/Homepage.html
@@ -59,7 +59,7 @@
             </a>
 
             <video class="fullscreen-vid" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                <source src="videos/trainchase.mp4" type="video/mp4">
+                <source src="videos/iceland.mp4" type="video/mp4">
             </video>
 
             <div class="container h-100">
@@ -103,7 +103,7 @@
             </a>
 
             <video class="fullscreen-vid" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                <source src="videos/serbiastrong.mp4" type="video/mp4">
+                <source src="videos/iceland.mp4" type="video/mp4">
             </video>
 
             <div class="container h-100">
@@ -115,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <!-- game video/link ends here-->
+
 
         <!-- changes to game image and link on tablet and smaller-->
         <div class="container-fluid d-block d-md-none">
@@ -132,7 +132,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- game video/link ends here-->
     </body>
 
 </html>
