--- a/Rogue Arts Website/FamilyHeirloom.html
+++ b/Rogue Arts Website/FamilyHeirloom.html
@@ -30,7 +30,7 @@
                 </div>
                 <!-- centers image-->
                 <div class="navbar" id="navbar_logo">
-                    <a class="navbar-brand" href="homepage.html">
+                    <a class="navbar-brand" href="index.html">
                         <img src="images/logo.png" class="img-fluid" width="120" height="120" class="d-inline-block align-top" alt="Rogue Arts">                                        
                     </a>
                 </div>              
@@ -42,9 +42,10 @@
 
                     <!-- Aligns dropdown items with menu-->
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="Homepage.html">Home</a>
-                    <a class="dropdown-item" href="AboutUs.html">About Us</a>
-                    <a class="dropdown-item" href="FamilyHeirloom.html">Family Heirloom</a>
+						<a class="dropdown-item" href="index.html">Home</a>
+						<a class="dropdown-item" href="AboutUs.html">About Us</a>
+						<a class="dropdown-item" href="FamilyHeirloom.html">Family Heirloom</a>
+						<a class="dropdown-item" href="contact_page.html">Contact Us</a>
                     </div>
                 </div>
             </nav>
